<resources>
    <string name="app_name">Open Fridge Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="change_setup">Change Server</string>
    <string name="scan_setup_code">Scan Installcode</string>
    <string name="number">Number</string>
    <string name="rec_number">Recommended Number</string>
    <string name="last_updated">Last updated: %1$s</string>
    <string name="store_in">Store</string>
    <string name="store_out">Withdraw</string>
    <string name="dialog_saved">Item saved</string>
    <string name="dialog_saved_msg">Your item with EAN: %1$s was successfully saved.</string>
    <string name="dialog_removed">Item removed</string>
    <string name="dialog_removed_msg">Your item with EAN: %1$s was successfully removed.</string>
    <string name="title_activity_setup">Setup your Server</string>
    <string name="api_url_title">Your Server URL:</string>
    <string name="api_url_field">https://</string>
    <string name="api_key_title">Your API Key:</string>
    <string name="api_key_field" />
    <string name="finish_setup">Finish setup</string>
</resources>