<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/food_row_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:longClickable="true">

    <ImageView
        android:id="@+id/food_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/last_updated_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/delete_item"
        android:layout_toEndOf="@+id/food_image"
        android:layout_toRightOf="@+id/food_image"
        android:layout_weight="1"
        android:padding="15dp"
        android:text="{FOOD_NAME}"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_item"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="@android:color/holo_red_dark"
        app:icon="@drawable/baseline_delete_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="@color/white" />

    <LinearLayout
        android:id="@+id/food_stats"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_name"
        android:layout_alignParentEnd="true"

        android:layout_toEndOf="@+id/food_image"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/food_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/food_rec_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rec_number"
                android:textAlignment="center" />
        </LinearLayout>


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/last_updated_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_stats">

        <TextView
            android:id="@+id/last_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_updated"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>